--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
-    "@react-three/drei": "^9.99.0",
-    "@react-three/fiber": "^8.15.16",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/three": "^0.160.0",
     "class-variance-authority": "^0.7.1",
@@ -20,7 +21,7 @@
     "gsap": "^3.12.0",
     "lucide-react": "^0.300.0",
     "maath": "^0.10.8",
-    "next": "14.1.0",
+    "next": "^15.1.0",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "react": "^18",
@@ -36,9 +37,9 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^15.1.0",
     "postcss": "^8",
-    "tailwindcss": "^4.0.0-alpha.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
